# chat-app

./: .editorconfig  .gitignore  Cargo.toml  README.md  Shuttle.toml  nx.json  package.json  tsconfig.base.json
.cargo/: config.toml
apps/backend/: Cargo.toml  project.json
apps/backend/src/: chat_server.rs  handler.rs  main.rs
apps/frontend/: .eslintrc.json  project.json
apps/frontend/src/: index.html  styles.css
apps/frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  chat.service.spec.ts  chat.service.ts  environment.ts  nx-welcome.component.ts  websocket.service.ts
apps/frontend/src/app/button/: button.component.ts
apps/frontend/src/app/chat-input/: chat-input.component.html  chat-input.component.ts
apps/frontend/src/app/chat-window/: chat-window.component.html  chat-window.component.spec.ts  chat-window.component.ts
apps/frontend/src/app/title/: title.component.spec.ts  title.component.ts
libs/api/: Cargo.toml  project.json
libs/common-ui/: project.json
libs/common-ui/src/: index.ts
libs/common-ui/src/lib/: common-ui.module.ts
libs/common-ui/src/lib/button/: button.component.html
libs/common-ui/src/lib/chat-input/: chat-input.component.html  chat-input.component.spec.ts  chat-input.component.ts
libs/types/src/lib/: types.ts
