[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.3.1"
actix-ws = "0.2.5"
futures = "0.3.28"
futures-util = "0.3.28"
shuttle = "0.6.1"
shuttle-actix-web = "0.18.0"
shuttle-runtime = "0.18.0"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
fastrand = "2.0.0"
log = "0.4.19"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
