[package]
name = "that-ambuj-chat-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-ws = "0.2.5"
futures = "0.3.28"
futures-util = "0.3.28"
shuttle = "0.6.1"
shuttle-actix-web = "0.18"
shuttle-runtime = "0.18"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
fastrand = "2.0.0"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
shuttle-static-folder = "0.18"
actix-files = "0.6.2"
